@@ -1,0 +1,1 @@
+h = {}; 5000000.times {|n| h[n] = n }
