@@ -1,3 +1,7 @@
+Thu Sep 15 00:59:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* benchmark/: add vnmakarov's benchmarks around hash [ruby-core:75265]
+
 Wed Sep 14 07:02:31 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* hash.c (each_pair_i_fast): use rb_yield_values2 to avoid var args.
